[package]
name = "kbbar"
version = "0.1.0"
authors = ["Karl Grasegger <karl.grasegger@gebruederheitz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"
chrono = "0.4.19"
hidapi = "1.2.5"